# sqlc-tutorial-postgresql-with-pgx-sqldef

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  go.mod  go.sum  query.sql  schema.sql  sqlc.yaml
cmd/server/: main.go
initdb/: 1_schema.sql
pyapi/: Dockerfile  README.md  pyproject.toml
pyapi/src/: db.py  main.py
