[project]
name = "pyapi"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "zztkm", email = "zztkm@tsurutatakumi.info" }
]
dependencies = [
    "fastapi[all]>=0.103.0",
    "sqlalchemy[asyncio]>=2.0.20",
    "asyncpg>=0.28.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
